<resources>
    <string name="app_name">Your dentistry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_item_desc_placholder">In this chapter, you’re going to learn about the different types of subjects in RxJava, see how to work with each one and why you might choose one over another based on some common use cases.</string>
    <string name="note_detail_desc_placeholder">You’ve gotten a handle on what an Observable is, how to create one, how to subscribe to it, and how to dispose of things when you’re done. Observables are a fundamental part of RxJava, but a common need when developing apps is to manually add new values onto an Observable at runtime that will then be emitted to subscribers. What you want is something that can act as both an Observable and as an observer. And that something is called a subject.</string>
    <string name="error_description">Description missing</string>
    <string name="error_name">Name missing</string>
    <string name="error_last_name">Lastname missing</string>
    <string name="error_age">Age missing</string>
    <string name="error_phone">Phone missing</string>
    <string name="error_title">Title missing</string>
    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_email">Enter email address</string>
    <string name="email">Email</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="logout">Logout</string>
    <string name="noteListingFragment">Notes</string>
    <string name="taskListingFragment">Tasks</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="home_fragment">Home</string>
    <string name="create_task">Create Task</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="error_task_detail">Task detail is missing</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="phone">Phone</string>
    <string name="history_sick">History sick</string>
    <string name="teeth_status">Teeth status</string>
    <string name="update_profile">Update profile</string>
    <string name="profile">Profile</string>
    <string name="queue">Queue</string>
    <string name="dentist">Dentist</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="patient">Patient</string>
    <string name="status">Status</string>
    <string name="register">Register</string>
    <string name="note_taking_app_where_you_save_words">Note taking app where you save words</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="haven_t_registered_yet">Haven’t registered yet?</string>
    <string name="login">Login</string>
    <string name="stand_in_line">Stand in line</string>
    <string name="find_first_free_place">Find first free place</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thud">THUD</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="edit_profile">Edit profile</string>
    <string name="calendar">Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="apply">Apply</string>
    <string name="images">Images</string>
    <string name="add_new_record">Add new record</string>

    <string-array name="Statuses">
        <item>Patient</item>
        <item>Dentist</item>
    </string-array>

    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>