<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_white_rect_bg"
    android:padding="10dp"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_cancel_24"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/dentist"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/delete"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/date"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/name"
        android:layout_toStartOf="@+id/delete"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/time"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/date"
        android:layout_toStartOf="@+id/delete"/>

</RelativeLayout>