<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_clr"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_nsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="36dp">

            <RelativeLayout
                android:id="@+id/rlMainData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="110dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/profile"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_profile_24"
                    android:visibility="visible"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize8Percent" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/SubTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/ivProfile"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/tvLastName"
                    style="@style/SubTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/lastname"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/ivProfile"
                    android:layout_below="@id/tvName"
                    android:layout_alignParentEnd="true"/>

                <LinearLayout
                    android:id="@+id/llAgeSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivProfile"
                    android:layout_below="@id/tvLastName">

                    <TextView
                        android:id="@+id/tvAge"
                        style="@style/SubTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_margin="5dp"
                        android:text="@string/age"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvSex"
                        style="@style/SubTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_margin="5dp"
                        android:text="@string/sex"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvPhone"
                    style="@style/SubTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/ivProfile"
                    android:layout_below="@id/llAgeSex"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlMainData"
                tools:ignore="SpeakableTextPresentCheck"
                tools:itemCount="1"
                tools:listitem="@layout/image_layout" />

            <LinearLayout
                android:id="@+id/llBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/images"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTeethStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/black_rect_bg"
                    android:text="@string/teeth_status"
                    android:textAllCaps="false"
                    android:textAppearance="@style/SubTitleStyle"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/black30"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdateProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/black_rect_bg"
                    android:text="@string/update_profile"
                    android:textAllCaps="false"
                    android:textAppearance="@style/SubTitleStyle"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/black"/>
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>