<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/back"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/back_text"
        style="@style/SubTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/back_text"
        android:layout_marginTop="10dp"
        android:background="@color/black10"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/top_divider">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fillViewport="true"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/rlMainData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/profile"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_profile_24"
                    android:visibility="visible"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize8Percent" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivProfile"
                    android:layout_margin="10dp"
                    android:background="@drawable/black_white_rect_bg"
                    android:ems="10"
                    android:fontFamily="@font/titillium_web_regular"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etName"
                    android:layout_margin="10dp"
                    android:background="@drawable/black_white_rect_bg"
                    android:ems="10"
                    android:fontFamily="@font/titillium_web_regular"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etLastName"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/black_white_rect_bg"
                    android:ems="10"
                    android:fontFamily="@font/titillium_web_regular"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etAge"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/black_white_rect_bg"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sSex"
                    android:layout_margin="10dp"
                    android:background="@drawable/black_white_rect_bg"
                    android:ems="10"
                    android:fontFamily="@font/titillium_web_regular"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etPhone"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    tools:itemCount="1"
                    tools:listitem="@layout/image_layout_btn_delete" />

                <LinearLayout
                    android:id="@+id/llAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/images"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/image_label"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/images"
                        android:textColor="@color/black70"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                    <ImageView
                        android:id="@+id/image_add"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_baseline_add_circle_24"
                        app:layout_constraintEnd_toStartOf="@+id/done"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_rect_bg"
            android:layout_marginTop="5dp"
            android:text="@string/apply"
            android:textAppearance="@style/SubTitleStyle"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/black" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/pbLoad"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/white"
        android:visibility="invisible" />


</RelativeLayout>